Set container height with percent to prevent to be hidden by safari nagigation bar

--- a/src/components/PickupSidebar.css
+++ b/src/components/PickupSidebar.css
@@ -53,7 +53,7 @@ h4.pkpmodal-title {
 
   .pkpmodal-info-bar-container {
     background-color: #f4f4f4;
-    height: 100vh;
+    height: 100%;
   }
 
   .pkpmodal-info-bar-map {
